--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,6 @@ notifications:
       - ufarruh@gmail.com
     on_success: [always|never|change] # default: change
     on_failure: [always|never|change] # default: always
+
+script:
+  - bundle exec rubocop
