--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,12 +1,19 @@
 inherit_from: .rubocop_todo.yml
 
+AllCops:
+  Include:
+    - '**/Rakefile'
+    - '**/config.ru'
+  Exclude:
+    - 'db/**/*'
+    - 'config/**/*'
+
+Rails:
+  Enabled: true
+
 Style/StringLiterals:
   EnforcedStyle: double_quotes
   Enabled: false
 
-  AllCops:
-    - Rakefile
-    - config.ru
-  
-  Rails:
-    Enabled: true
+Style/Documentation:
+  Enabled: false
