Set up test database for Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,12 @@ notifications:
     on_success: [always|never|change] # default: change
     on_failure: [always|never|change] # default: always
 
+services:
+  - postgresql
+
+before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
+
 script:
   - bundle exec rubocop
   - bundle exec rspec
