Configure Travis CI to use the proper database

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,11 @@ notifications:
 services:
   - postgresql
 
+addons:
+  postgresql: "9.4"
+
 before_script:
+  - cp config/database.yml.travis config/database.yml
   - psql -c 'create database travis_ci_test;' -U postgres
 
 script:
