Configure Travis CI to migrate database before build

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ addons:
 before_script:
   - cp config/database.yml.travis config/database.yml
   - psql -c 'create database travis_ci_test;' -U postgres
+  - bin/rake db:migrate RAILS_ENV=test
 
 script:
   - bundle exec rubocop
