Change Pusher private keys configuration

--- a/config/application.yml
+++ b/config/application.yml
@@ -1,3 +1,5 @@
-Pusher.app_id = 217902
-Pusher.key = '7999a06c531a57919212'
-Pusher.secret = '05f62956d50645df8cbb'
+
+
+pusher_app_id = 217902
+pusher_key = '7999a06c531a57919212'
+pusher_secret = '05f62956d50645df8cbb'
