--- a/app.json
+++ b/app.json
@@ -24,7 +24,8 @@
   },
   "addons": [
     "heroku-postgresql:hobby-dev",
-    "pusher:sandbox"
+    "pusher:sandbox",
+    "sendgrid:starter"
   ],
   "buildpacks": [
     {
